# connect-four

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
cmake/: setup.cmake
game/: CMakeLists.txt
game-test/: CMakeLists.txt  game-test.cpp
game/src/: board.cpp  logging.cpp  main.cpp  random.cpp  setup.cpp  time_utils.cpp
rooster/: CMakeLists.txt  main.cpp
rooster/src/: centurion.cpp  game.cpp  ginseng.cpp  hooks.cpp  logging.cpp  rooster.cpp  time_utils.cpp
